[tool.poetry]
name = "convex-optimization"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"
packages = [{include = "convex_optimization"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
streamlit = "^1.40.1"
jupyterlab = "^4.3.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
